Update ComponentHelper for Conditions